--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,10 @@
       <div id="display-side">
         <div class="d-flex">
           <h2>Recent Scores</h2>
-          <button>Refresh</button>
+          <button id="refresh-button">Refresh</button>
         </div>
         <div>
           <ul id="score-table">
-            <li>Name:100</li>
           </ul>
         </div>
       </div>
@@ -25,7 +24,7 @@
           <form action="submit" class="d-flex f-column" id="form-area">
             <input type="text" id="name"  placeholder="Your Name">
             <input type="text" id="score" placeholder="Your Score">
-            <button>submit</button>
+            <button type="submit">submit</button>
           </form>
         </div>
       </div>
