Fix Linters and Add CSS

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
           <form action="submit" class="d-flex f-column" id="form-area">
             <input type="text" id="name"  placeholder="Your Name">
             <input type="text" id="score" placeholder="Your Score">
-            <button type="submit">submit</button>
+            <button type="submit">Submit</button>
           </form>
         </div>
       </div>
